# kb_red

./: .gitmodules  README.md
src/kb_autopilot/: CMakeLists.txt  package.xml
src/kb_autopilot/include/: obstacle_avoider.h  path_manager_base.h  path_manager_example.h
src/kb_autopilot/include/ekf/: ekf.h
src/kb_autopilot/include/kb_autopilot/: path_manager_base.h
src/kb_autopilot/include/vserv/: vserv.h
src/kb_autopilot/launch/: backend.launch  ekf_bag_play.launch  line_follow.launch  log_backend.launch  match_test.launch  oa_test.launch  rtabmap.launch  slam.launch
src/kb_autopilot/msg/: Manager_State.msg  State.msg  Vo.msg  Waypoint.msg
src/kb_autopilot/param/: ekf.yaml  waypoint_list.yaml
src/kb_autopilot/scripts/: controller.py  keyframe_divide.py  manager.py  mocap_to_state.py  plot_bag.py  vo.py  vservo.py
src/kb_autopilot/src/: ekf.cpp  ekf_node.cpp  obstacle_avoider.cpp  path_follower_base.cpp  path_follower_example.cpp  path_manager_base.cpp  path_manager_example.cpp  path_planner.cpp  vserv.cpp  vserv_node.cpp
src/kb_sim/: CMakeLists.txt  package.xml
src/kb_sim/launch/: test_controller.launch  vehicle_waypoints.yaml  vehicles.launch
src/kb_sim/models/grassy_land/: model.config  model.sdf
src/kb_sim/models/grassy_land/materials/scripts/: grassy_land.material
src/kb_sim/models/polaris_ranger_xp900/: model.sdf
src/kb_sim/models/urban/: model.config  model.sdf  waypoints
src/kb_sim/models/urban/materials/scripts/: urban.material
src/kb_sim/models/urban/materials/textures/: 3dworld.dae
src/kb_sim/scripts/: vehicle_controller.py
src/kb_sim/src/: DRCVehicleROSPlugin.cpp
src/kb_sim/worlds/: urban.2.world  urban.world  world_builder.py
src/kf_factory/: CMakeLists.txt  package.xml
src/kf_factory/src/: keyframe_factory_node.cpp
