<?xml version="1.0"?>
<package>
  <name>kf_factory</name>
  <version>0.0.0</version>
  <description>The openfabmap package catkinized</description>

  <maintainer email="james@todo.todo">james</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>relative_nav</build_depend>
  <build_depend>kb_autopilot</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>relative_nav</run_depend>
  <run_depend>kb_autopilot</run_depend>

  <export>

  </export>
</package>
